# project-recon

./: .gitignore  CHANGELOG.md  Makefile  README.md  USAGE.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  uninstall.sh  update.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  plugin-submission.yml  tool_request.yml
.github/workflows/: ci.yml  sort-format-json.yml  validate-json.yml
docs/: plugin-development.md  recon_user_guide.html
marketplace/: registry.json
marketplace/plugins/: breach_check.py  geolocation_osint.py  social_deep_dive.py
scripts/: generate_sites.py
tests/: test_evidence.py  test_orchestrator.py  test_sessions.py  test_templates.py  test_tool_catalog.py
tools/4n6notebooks/: 4n6notebooks-cli.py
tools/compreface/: compreface-cli.py
tools/keychain-decrypter/: keychain-cli.py
tools/osint-tools-cli/: osint-tools-cli-wrapper.py
tools/untappd-scraper/: untappd-cli.py
whatsmyname/: __init__.py  __main__.py  checker.py  cli.py  data_manager.py  enrichment.py  evidence.py  orchestrator.py  plugin_loader.py  recon_cli.py  reporter.py  sessions.py  shell.py  templates.py  tool_catalog.py  workflows.py
whatsmyname/data/: __init__.py  extended_sites.json
